hover state for selected navtab prevent jumping

--- a/adaptable/pages/mainComponents/Header/navbar/Navbar.module.scss
+++ b/adaptable/pages/mainComponents/Header/navbar/Navbar.module.scss
@@ -22,6 +22,11 @@
         &__btn--notSelected:hover {
             color: #7B3CEA;
         }
+
+        &__btn--selected {
+            position: relative;
+            top: -4px;
+        }
     }
 
     &__btnWrapper--selected {
